kustomize/deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-rsyslog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-rsyslog
  template:
    metadata:
      labels:
        app: simple-rsyslog
    spec:
      volumes:
        - name: simple-rsyslog
          secret:
            secretName: simple-rsyslog
            defaultMode: 420
      containers:
        - name: simple-rsyslog
          image: quay.io/pflaeging/simple-rsyslog:latest
          resources:
            requests:
              cpu: "100m"
              memory: "125Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: simple-rsyslog
              readOnly: true
              mountPath: /certs/
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
