kustomize/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: simple-rsyslog
  name: simple-rsyslog
spec:
  ports:
    - name: tcp-syslog
      protocol: TCP
      port: 1514
      targetPort: 1514
  selector:
    app: simple-rsyslog
  type: ClusterIP
  sessionAffinity: None
