kustomize/deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simple-rsyslog
spec:
  to:
    kind: Service
    name: $(ROUTE_SERVICE)
    weight: 100
  port:
    targetPort: tcp-syslog
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
